--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
 
 /* Variables */
 :root {
-  --font-family: "Roboto", sans-serf;
+  --font-family:'Shantell Sans', cursive, "Roboto", sans-serf;
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
@@ -99,59 +99,18 @@ nav ul li {
 /* Hero section */
 /* for vanta js background-image */
 canvas.vanta-canvas {
-  background-image: linear-gradient(
-    180deg,
-    hsl(60, 100%, 95%) 1%,
-    hsl(60, 100%, 90%) 42%,
-    hsl(60, 100%, 85%) 49%,
-    hsl(60, 100%, 80%) 51%,
-    hsl(60, 100%, 75%) 51%,
-    hsl(60, 100%, 70%) 50%,
-    hsl(210, 100%, 10%) 49%,
-    hsl(210, 100%, 15%) 49%,
-    hsl(210, 100%, 20%) 51%,
-    hsl(210, 100%, 25%) 58%,
-    hsl(210, 100%, 30%) 99%
-  ) !important;
-}
+  background: -webkit-linear-gradient(bottom, rgba(249,251,240,1) 10%, rgba(215,253,254,1) 20%, rgba(167,222,253,1) 40%, rgba(110,175,255,1) 100%); 
+  background: -moz-linear-gradient(bottom, rgba(249,251,240,1) 10%, rgba(215,253,254,1) 20%, rgba(167,222,253,1) 40%, rgba(110,175,255,1) 100%); 
+  background: -ms-linear-gradient(bottom, rgba(249,251,240,1) 10%, rgba(215,253,254,1) 20%, rgba(167,222,253,1) 40%, rgba(110,175,255,1) 100%); 
+  background: linear-gradient(bottom, rgba(249,251,240,1) 10%, rgba(215,253,254,1) 20%, rgba(167,222,253,1) 40%, rgba(110,175,255,1) 100%) !important; 
+  opacity: 0.52;
 
-/* Lightest shade: HSL (60, 100%, 95%)
-Lighter shade: HSL (60, 100%, 90%)
-Light shade: HSL (60, 100%, 85%)
-Mid shade: HSL (60, 100%, 80%)
-Darker shade: HSL (60, 100%, 75%)
-Darkest shade: HSL (60, 100%, 70%)
-
-Darkest shade: HSL (210, 100%, 10%)
-Darker shade: HSL (210, 100%, 15%)
-Dark shade: HSL (210, 100%, 20%)
-Mid shade: HSL (210, 100%, 25%)
-Lighter shade: HSL (210, 100%, 30%)
-Lightest shade: HSL (210, 100%, 35%)*/
-
-/*  hsl(45deg 69% 75%) 1%,
-    hsl(51deg 75% 75%) 42%,
-    hsl(56deg 82% 74%) 49%,
-    hsl(60deg 88% 74%) 51%,
-    hsl(54deg 82% 70%) 51%,
-    hsl(45deg 74% 63%) 50%,
-    hsl(35deg 69% 54%) 49%,
-     hsl(35deg 69% 54%) 49%,
-    hsl(35deg 77% 47%) 49%,
-    hsl(47deg 69% 53%) 51%,
-    hsl(59deg 70% 58%) 58%,
-    hsl(69deg 95% 66%) 99%*/
-
-.sun {
-  position: sticky;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background: white;
+  
 }
 
 .hero {
   position: relative;
+  top: -40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,16 +121,8 @@ Lightest shade: HSL (210, 100%, 35%)*/
   padding: 16px;
 }
 
-#welcome {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  font-size: 6rem;
-}
 
 .hero img {
-  border: 4px solid var(--primary-color);
   height: 25.5rem;
   width: 25.5rem;
   object-fit: cover;
@@ -179,18 +130,20 @@ Lightest shade: HSL (210, 100%, 35%)*/
   background-color: white;
   border-radius: 50%;
   overflow: hidden;
+  box-shadow: 0 3px 10px var(--primary-shadow);
 }
 
 #nameHero {
  font-size: 3rem;
+ font-family: var(--font-family)
 }
 
 .bio {
   width: 27rem;
   padding: 0.625rem;
   border-radius: 6px;
-  border: 4px solid var(--primary-color);
   background-color: white;
+  box-shadow: 0 3px 10px var(--primary-shadow);
 }
 
 .bio h1 {
@@ -216,7 +169,7 @@ Lightest shade: HSL (210, 100%, 35%)*/
 /* More about */
 .about-title {
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .more-about {
   display: grid;
@@ -263,7 +216,8 @@ Lightest shade: HSL (210, 100%, 35%)*/
   max-width: 68.75rem;
   margin: auto;
   text-align: center;
-  margin-top: 2.5rem;
+  margin-top: 2rem;
+  padding: 1rem 3.5rem;
 }
 
 .sticky-container {
@@ -302,7 +256,8 @@ Lightest shade: HSL (210, 100%, 35%)*/
 }
 
 .skill-header {
-  margin-bottom: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 .skills-wrapper img {
@@ -318,7 +273,7 @@ Lightest shade: HSL (210, 100%, 35%)*/
 /* Projects section */
 .projects {
   background-color: var(--bg-color);
-  padding: 32px 0;
+  padding: 1rem 3.5rem;
   margin-top: 2rem;
   border-top: 2px solid var(--primary-color);
   border-bottom: 2px solid var(--primary-color);
@@ -360,8 +315,8 @@ Lightest shade: HSL (210, 100%, 35%)*/
 
 .projects-title {
   text-align: center;
-  margin-bottom: 1rem;
-  margin-top: 2.5rem;
+  margin-bottom: 2rem;
+  margin-top: calc(3rem + 10px);
 }
 
 .project-container {
@@ -391,11 +346,18 @@ Lightest shade: HSL (210, 100%, 35%)*/
 /* Contacts section */
 .contact {
   margin-top: 2rem;
+  padding: 1rem 3.5rem;
 }
 
-.contact h2 {
+/* .contact h2 {
   text-align: center;
   margin-bottom: var(--bottom-margin-2);
+} */
+
+.in-touch {
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 .contact-form-container {
@@ -571,6 +533,7 @@ footer p {
   }
 
   .hero {
+    top: -20px;
     flex-direction: column;
     gap: 8px;
     justify-content: center;
